popup.css
body {
    width: 500px;
    height: 600px;
    padding: 0px;
    margin: 0px;
    font-family: helvetica;
}

header {
    background-color: #b9e3ff;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: #1f4877;
    text-shadow: 0px 0px 100px #1f4877;

    #icon {
        height: 50%;
        width: 50%;
    }
}

#panel-log {
    padding: .5rem;

    #panel-head {
        padding: 0rem 1rem;

        button {
            float: right;
            background-color: #0e8ac9;
            color: #fff;
            border-radius: 5px;
            border: none;
            padding: .25rem .5rem;
            margin-top: -.5rem;
            transition: ease .2s;
            cursor: pointer;
            
            img {
                width: 1.5rem;
            }
        }

        button:hover {
            background-color: #b11266;
        }
    }

    .request {
        padding: .5rem;

        ::details-content {
            overflow-x: scroll;
        }

    }
}

